# Classroom-Mangement-System-Desktop-App

./: Admin.cpp  Admin.csv  Admin.h  CMakeLists.txt  Date.cpp  Date.h  Equipments.cpp  Equipments.h  Images.qrc  Metadata.cpp  Metadata.h  Physical_location.cpp  Physical_location.h  Project Idea.md  README.md  RMS.pro  RMSTime.cpp  RMSTime.h  Record.cpp  Record.csv  Record.h  Room.cpp  Room.csv  Room.h  Staff.cpp  Staff.csv  Staff.h  Student.cpp  Student.csv  Student.h  System_initializer.cpp  System_initializer.h  System_intializer.cpp  System_intializer.h  Time.cpp  Time.h  User.cpp  User.h  log.txt  main.cpp  (+4 more)
res/img/: ButtonFrame.ai
